--- a/WebApp/Styles/DataList.css
+++ b/WebApp/Styles/DataList.css
@@ -50,6 +50,8 @@
 {
   width: 40%;
   text-align: right;
+  margin: 0 3px;
+  font-weight: bold;
 }
 
 .DataList .Separator
@@ -59,7 +61,8 @@
 
 .DataList .Value
 {
-  width: 58%;
+  width: 50%;
+  margin: 0 3px;
 }
 
 .DataList .Space1, .DataList .Space2, .DataList .Space4
